--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,21 @@
 @import "variables";
 @import "mixins";
 
+@mixin flex {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+}
+
+$black: rgb(29, 29, 36);
+$gray: #2e3140;
+$blue-gray: rgb(108, 129, 144);
+$light-blue-gray: rgb(209, 213, 220);
+$rose-gold: rgb(201, 146, 151);
+$dark-rose: rgb(167, 121, 125);
+$white: rgb(245, 240, 235);
+
 body {
 	font-size: 16px;
 	line-height: 1.8;
@@ -13,7 +28,7 @@ body {
 ::selection { background: yellow; }
 h1, h2, h3, h4, h5 {
 	color: $black;
-}
+} 
 a {
 	transition: .3s all ease;
 	&:hover, &:active, &:focus {
@@ -21,7 +36,7 @@ a {
 		outline: none;
 	}
 }
- 
+
 .templateux-navbar {
 	position: absolute;
 	top: 0;
@@ -213,13 +228,13 @@ a {
 		}
 	}
 }
-.templateux-hero {
+.hero {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
 	position: relative;
 	overflow: hidden;
-	// background: #f6f6f6;
+	background: $rose-gold;
 	.lead {
 		font-size: 28px;
 		@include media-breakpoint-down(md) {
@@ -261,7 +276,7 @@ a {
 		}
 	}
 }
-.templateux-hero, .intro {
+.hero, .intro {
 	height: 90vh;
 	min-height: 700px;
 
@@ -939,3 +954,48 @@ textarea.form-control {
 		}
 	}
 }
+
+// My Custom CSS
+
+.sticky {
+	position: fixed;
+	top: 0;
+	width: 100%;
+  }
+
+  .navbar-bg {
+	position: fixed;
+	top: 11px;
+    width: 100%;
+    height: 75px;
+	background: $light-blue-gray;
+	opacity: .9;
+  }
+
+  span.copy-email {
+
+	&:hover {
+		color: $black!important;
+		cursor: pointer;
+	}
+  }
+  .copied-alert {
+	display: none;
+	background: $light-blue-gray;
+    font-size: 13px;
+    width: 136px;
+    height: 24px;
+    margin: 0 auto;
+	bottom: 379px;
+	left: 50%;
+	opacity: .95;
+    position: fixed;
+    border-radius: 3px;
+	z-index: 100;
+	p {
+		text-align: center;
+	}
+  }
+
+
+
