--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -18,7 +18,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #dc3545;
+  --primary: #c99297;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -137,12 +137,12 @@ sup {
   top: -.5em; }
 
 a {
-  color: #dc3545;
+  color: #c99297;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #a71d2a;
+    color: #b05f66;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -1078,13 +1078,13 @@ pre {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #f5c6cb; }
+  background-color: #f0e0e2; }
 
 .table-hover .table-primary:hover {
-  background-color: #f1b0b7; }
+  background-color: #e8cfd2; }
   .table-hover .table-primary:hover > td,
   .table-hover .table-primary:hover > th {
-    background-color: #f1b0b7; }
+    background-color: #e8cfd2; }
 
 .table-secondary,
 .table-secondary > th,
@@ -1268,9 +1268,9 @@ pre {
   .form-control:focus {
     color: #495057;
     background-color: #fff;
-    border-color: #efa2a9;
+    border-color: #f3e7e8;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(201, 146, 151, 0.25); }
   .form-control::placeholder {
     color: #6c757d;
     opacity: 1; }
@@ -1637,7 +1637,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(201, 146, 151, 0.25); }
   .btn.disabled, .btn:disabled {
     opacity: 0.65; }
   .btn:not(:disabled):not(.disabled) {
@@ -1650,27 +1650,27 @@ fieldset:disabled a.btn {
   pointer-events: none; }
 
 .btn-primary {
-  color: #fff;
-  background-color: #dc3545;
-  border-color: #dc3545; }
+  color: #212529;
+  background-color: #c99297;
+  border-color: #c99297; }
   .btn-primary:hover {
     color: #fff;
-    background-color: #c82333;
-    border-color: #bd2130; }
+    background-color: #bc787f;
+    border-color: #b87076; }
   .btn-primary:focus, .btn-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(201, 146, 151, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
-    color: #fff;
-    background-color: #dc3545;
-    border-color: #dc3545; }
+    color: #212529;
+    background-color: #c99297;
+    border-color: #c99297; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #bd2130;
-    border-color: #b21f2d; }
+    background-color: #b87076;
+    border-color: #b4676e; }
     .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-primary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(201, 146, 151, 0.5); }
 
 .btn-secondary {
   color: #fff;
@@ -1834,27 +1834,27 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5); }
 
 .btn-outline-primary {
-  color: #dc3545;
+  color: #c99297;
   background-color: transparent;
   background-image: none;
-  border-color: #dc3545; }
+  border-color: #c99297; }
   .btn-outline-primary:hover {
-    color: #fff;
-    background-color: #dc3545;
-    border-color: #dc3545; }
+    color: #212529;
+    background-color: #c99297;
+    border-color: #c99297; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(201, 146, 151, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #dc3545;
+    color: #c99297;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
-    color: #fff;
-    background-color: #dc3545;
-    border-color: #dc3545; }
+    color: #212529;
+    background-color: #c99297;
+    border-color: #c99297; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(201, 146, 151, 0.5); }
 
 .btn-outline-secondary {
   color: #6c757d;
@@ -2019,10 +2019,10 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #dc3545;
+  color: #c99297;
   background-color: transparent; }
   .btn-link:hover {
-    color: #a71d2a;
+    color: #b05f66;
     text-decoration: underline;
     background-color: transparent;
     border-color: transparent; }
@@ -2230,7 +2230,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #dc3545; }
+    background-color: #c99297; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     background-color: transparent; }
@@ -2470,12 +2470,12 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    background-color: #dc3545; }
+    background-color: #c99297; }
   .custom-control-input:focus ~ .custom-control-label::before {
-    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(220, 53, 69, 0.25); }
+    box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(201, 146, 151, 0.25); }
   .custom-control-input:active ~ .custom-control-label::before {
     color: #fff;
-    background-color: #f6cdd1; }
+    background-color: white; }
   .custom-control-input:disabled ~ .custom-control-label {
     color: #6c757d; }
     .custom-control-input:disabled ~ .custom-control-label::before {
@@ -2511,34 +2511,34 @@ input[type="button"].btn-block {
   border-radius: 0.25rem; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #dc3545; }
+  background-color: #c99297; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  background-color: #dc3545; }
+  background-color: #c99297; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E"); }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(220, 53, 69, 0.5); }
+  background-color: rgba(201, 146, 151, 0.5); }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(220, 53, 69, 0.5); }
+  background-color: rgba(201, 146, 151, 0.5); }
 
 .custom-radio .custom-control-label::before {
   border-radius: 50%; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #dc3545; }
+  background-color: #c99297; }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23fff'/%3E%3C/svg%3E"); }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(220, 53, 69, 0.5); }
+  background-color: rgba(201, 146, 151, 0.5); }
 
 .custom-select {
   display: inline-block;
@@ -2554,9 +2554,9 @@ input[type="button"].btn-block {
   border-radius: 0.25rem;
   appearance: none; }
   .custom-select:focus {
-    border-color: #efa2a9;
+    border-color: #f3e7e8;
     outline: 0;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 5px rgba(239, 162, 169, 0.5); }
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 5px rgba(243, 231, 232, 0.5); }
     .custom-select:focus::-ms-value {
       color: #495057;
       background-color: #fff; }
@@ -2597,10 +2597,10 @@ input[type="button"].btn-block {
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-label {
-    border-color: #efa2a9;
-    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25); }
+    border-color: #f3e7e8;
+    box-shadow: 0 0 0 0.2rem rgba(201, 146, 151, 0.25); }
     .custom-file-input:focus ~ .custom-file-label::after {
-      border-color: #efa2a9; }
+      border-color: #f3e7e8; }
   .custom-file-input:lang(en) ~ .custom-file-label::after {
     content: "Browse"; }
 
@@ -2646,15 +2646,15 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #dc3545;
+    background-color: #c99297;
     border: 0;
     border-radius: 1rem;
     appearance: none; }
     .custom-range::-webkit-slider-thumb:focus {
       outline: none;
-      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(220, 53, 69, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(201, 146, 151, 0.25); }
     .custom-range::-webkit-slider-thumb:active {
-      background-color: #f6cdd1; }
+      background-color: white; }
   .custom-range::-webkit-slider-runnable-track {
     width: 100%;
     height: 0.5rem;
@@ -2666,15 +2666,15 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #dc3545;
+    background-color: #c99297;
     border: 0;
     border-radius: 1rem;
     appearance: none; }
     .custom-range::-moz-range-thumb:focus {
       outline: none;
-      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(220, 53, 69, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(201, 146, 151, 0.25); }
     .custom-range::-moz-range-thumb:active {
-      background-color: #f6cdd1; }
+      background-color: white; }
   .custom-range::-moz-range-track {
     width: 100%;
     height: 0.5rem;
@@ -2686,15 +2686,15 @@ input[type="button"].btn-block {
   .custom-range::-ms-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #dc3545;
+    background-color: #c99297;
     border: 0;
     border-radius: 1rem;
     appearance: none; }
     .custom-range::-ms-thumb:focus {
       outline: none;
-      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(220, 53, 69, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(201, 146, 151, 0.25); }
     .custom-range::-ms-thumb:active {
-      background-color: #f6cdd1; }
+      background-color: white; }
   .custom-range::-ms-track {
     width: 100%;
     height: 0.5rem;
@@ -2756,7 +2756,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #dc3545; }
+  background-color: #c99297; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3257,19 +3257,19 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #dc3545;
+  color: #c99297;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
     z-index: 2;
-    color: #a71d2a;
+    color: #b05f66;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6; }
   .page-link:focus {
     z-index: 2;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(201, 146, 151, 0.25); }
   .page-link:not(:disabled):not(.disabled) {
     cursor: pointer; }
 
@@ -3285,8 +3285,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #dc3545;
-  border-color: #dc3545; }
+  background-color: #c99297;
+  border-color: #c99297; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3344,12 +3344,12 @@ input[type="button"].btn-block {
   border-radius: 10rem; }
 
 .badge-primary {
-  color: #fff;
-  background-color: #dc3545; }
+  color: #212529;
+  background-color: #c99297; }
   .badge-primary[href]:hover, .badge-primary[href]:focus {
-    color: #fff;
+    color: #212529;
     text-decoration: none;
-    background-color: #bd2130; }
+    background-color: #b87076; }
 
 .badge-secondary {
   color: #fff;
@@ -3444,13 +3444,13 @@ input[type="button"].btn-block {
     color: inherit; }
 
 .alert-primary {
-  color: #721c24;
-  background-color: #f8d7da;
-  border-color: #f5c6cb; }
+  color: #694c4f;
+  background-color: #f4e9ea;
+  border-color: #f0e0e2; }
   .alert-primary hr {
-    border-top-color: #f1b0b7; }
+    border-top-color: #e8cfd2; }
   .alert-primary .alert-link {
-    color: #491217; }
+    color: #4b3739; }
 
 .alert-secondary {
   color: #383d41;
@@ -3536,7 +3536,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #dc3545;
+  background-color: #c99297;
   transition: width 0.6s ease; }
   @media screen and (prefers-reduced-motion: reduce) {
     .progress-bar {
@@ -3597,8 +3597,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #dc3545;
-    border-color: #dc3545; }
+    background-color: #c99297;
+    border-color: #c99297; }
 
 .list-group-flush .list-group-item {
   border-right: 0;
@@ -3612,15 +3612,15 @@ input[type="button"].btn-block {
   border-bottom: 0; }
 
 .list-group-item-primary {
-  color: #721c24;
-  background-color: #f5c6cb; }
+  color: #694c4f;
+  background-color: #f0e0e2; }
   .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-    color: #721c24;
-    background-color: #f1b0b7; }
+    color: #694c4f;
+    background-color: #e8cfd2; }
   .list-group-item-primary.list-group-item-action.active {
     color: #fff;
-    background-color: #721c24;
-    border-color: #721c24; }
+    background-color: #694c4f;
+    border-color: #694c4f; }
 
 .list-group-item-secondary {
   color: #383d41;
@@ -4248,12 +4248,12 @@ button.close {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #dc3545 !important; }
+  background-color: #c99297 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #bd2130 !important; }
+  background-color: #b87076 !important; }
 
 .bg-secondary {
   background-color: #6c757d !important; }
@@ -4348,7 +4348,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #dc3545 !important; }
+  border-color: #c99297 !important; }
 
 .border-secondary {
   border-color: #6c757d !important; }
@@ -6152,10 +6152,10 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #dc3545 !important; }
+  color: #c99297 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #bd2130 !important; }
+  color: #b87076 !important; }
 
 .text-secondary {
   color: #6c757d !important; }
