--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,12 @@ a {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 35px 0;
+  padding: 0;
   z-index: 99999; }
   .templateux-navbar .container-fluid {
     max-width: 100%; }
   .templateux-navbar .toggle-menu {
     z-index: 9999;
-    position: relative;
     top: -13px;
     display: none; }
     @media (max-width: 767.98px) {
@@ -40,37 +39,37 @@ a {
       outline: none; }
   .templateux-navbar .site-logo {
     position: relative;
-    top: -10px;
+    top: 2px;
     z-index: 9999; }
-    .templateux-navbar .site-logo a {
-      font-size: 30px;
-      color: #1d1d24; }
   .templateux-navbar .templateux-menu {
     position: relative; }
     .templateux-navbar .templateux-menu ul {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      height: 75px;
       margin-bottom: 0; }
+      @media (max-width: 767.98px) {
+        .templateux-navbar .templateux-menu ul {
+          display: block;
+          padding: 0;
+          text-align: center; } }
       .templateux-navbar .templateux-menu ul li {
         display: inline-block; }
         .templateux-navbar .templateux-menu ul li a {
           margin-right: 20px;
           font-size: 13px;
+          font-weight: 700;
           text-transform: uppercase;
           letter-spacing: .2em;
-          color: #1d1d24;
+          color: #f4efea;
           position: relative;
-          padding-bottom: 5px;
           display: block; }
-          .templateux-navbar .templateux-menu ul li a:before {
-            content: "";
-            position: absolute;
-            bottom: 0;
-            height: 2px;
-            width: 0;
-            left: 0;
-            background: #dc3545;
-            transition: .15s width ease; }
-          .templateux-navbar .templateux-menu ul li a:hover:before {
-            width: 100%; }
+          @media (max-width: 767.98px) {
+            .templateux-navbar .templateux-menu ul li a {
+              margin-right: 0; } }
+          .templateux-navbar .templateux-menu ul li a:hover {
+            color: #a7797d !important; }
         .templateux-navbar .templateux-menu ul li.active > a:before {
           width: 100%; }
         .templateux-navbar .templateux-menu ul li:last-child a {
@@ -79,7 +78,8 @@ a {
       .templateux-navbar .templateux-menu {
         position: fixed;
         width: 100%;
-        background-color: #fff;
+        background-color: #f4efea;
+        opacity: .9;
         top: 0;
         left: 0;
         margin: 0;
@@ -103,11 +103,9 @@ a {
       .templateux-navbar .templateux-menu ul {
         margin-left: 0px; } }
   .templateux-navbar.navbar-light .site-logo a {
-    color: #f5f0eb; }
-  .templateux-navbar.navbar-light .hamburger .hamburger-inner, .templateux-navbar.navbar-light .hamburger .hamburger-inner::before, .templateux-navbar.navbar-light .hamburger .hamburger-inner::after {
-    background-color: #f5f0eb; }
+    color: #f4efea; }
   .templateux-navbar.navbar-light .templateux-menu ul li a {
-    color: #f5f0eb; }
+    color: #f4efea; }
 
 .menu-open .templateux-navbar {
   position: fixed;
@@ -116,10 +114,10 @@ a {
 
 @media (max-width: 767.98px) {
   .menu-open .site-logo a {
-    color: #1d1d24 !important; } }
+    color: #c99297 !important; } }
 
 .menu-open .navbar-light .hamburger .hamburger-inner, .menu-open .navbar-light .hamburger .hamburger-inner::before, .menu-open .navbar-light .hamburger .hamburger-inner::after {
-  background-color: #1d1d24; }
+  background-color: #a7797d; }
 
 .menu-open .templateux-menu li {
   opacity: 0;
@@ -132,17 +130,15 @@ a {
     visibility: visible;
     margin-left: 0px; }
 
-@media (max-width: 767.98px) {
-  .menu-open .templateux-menu li a {
-    color: #1d1d24 !important; } }
-
 .hero {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   position: relative;
   overflow: hidden;
-  background: #c99297; }
+  background: linear-gradient(to right, #c99297 20%, #EBA4AB 40%, #EBA4AB 60%, #c99297 80%);
+  animation: shine 5s linear infinite;
+  background-size: 200% auto; }
   .hero .lead {
     font-size: 28px; }
     @media (max-width: 991.98px) {
@@ -171,20 +167,16 @@ a {
     bottom: 0;
     right: 0; }
   .hero.overlay h1 {
-    color: #f5f0eb; }
+    color: #f4efea; }
   .hero.overlay .lead {
-    color: #f5f0eb;
+    color: #f4efea;
     opacity: .5; }
 
 .hero, .intro {
-  height: 90vh;
-  min-height: 700px; }
+  height: 70vh; }
   .hero h1, .intro h1 {
-    color: #1d1d24;
-    font-size: 70px; }
-    @media (max-width: 991.98px) {
-      .hero h1, .intro h1 {
-        font-size: 36px; } }
+    color: #a7797d;
+    font: 900 36px 'Playfair Display', serif; }
 
 .templateux-portfolio-overlap {
   position: relative;
@@ -213,14 +205,14 @@ a {
 .templateux-cta {
   padding: 7em 0;
   display: block;
-  background: #f8f9fa;
+  background: #6c8190;
   position: relative; }
   .templateux-cta:before {
     content: "";
     position: absolute;
     height: 0px;
     bottom: 0;
-    background: #dc3545;
+    background: #c99297;
     width: 100%;
     left: 0;
     transition: .3s all ease-out; }
@@ -235,13 +227,21 @@ a {
     transform: translate(-50%, -50%);
     transition: .3s all ease; }
   .templateux-cta .words-1 {
+    color: #c99297;
     opacity: 1;
     visibility: visible;
     top: 0; }
+    @media (max-width: 767.98px) {
+      .templateux-cta .words-1 {
+        font-size: 24px; } }
   .templateux-cta .words-2 {
     opacity: 0;
     visibility: hidden;
-    top: 40px; }
+    top: 40px;
+    font-weight: 700; }
+    @media (max-width: 767.98px) {
+      .templateux-cta .words-2 {
+        font-size: 24px; } }
   .templateux-cta h2 {
     font-weight: normal;
     margin-bottom: 0;
@@ -259,7 +259,7 @@ a {
     opacity: 1;
     visibility: visible;
     top: 0px;
-    color: #f5f0eb; }
+    color: #f4efea; }
 
 .section-heading {
   font-size: 14px;
@@ -291,7 +291,7 @@ a {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(220, 53, 69, 0.9);
+    background: rgba(201, 146, 151, 0.9);
     visibility: hidden;
     opacity: 0;
     transition: .3s all ease; }
@@ -307,7 +307,7 @@ a {
       transition: .3s all ease;
       text-align: center; }
       .project .project-hover .project-hover-inner h2, .project .project-hover .post-hover-inner h2, .project .post-hover .project-hover-inner h2, .project .post-hover .post-hover-inner h2, .post .project-hover .project-hover-inner h2, .post .project-hover .post-hover-inner h2, .post .post-hover .project-hover-inner h2, .post .post-hover .post-hover-inner h2 {
-        color: #f5f0eb;
+        color: #f4efea;
         font-size: 26px;
         line-height: 1.2;
         transition: .3s all ease;
@@ -316,7 +316,7 @@ a {
         position: relative;
         bottom: -30px; }
       .project .project-hover .project-hover-inner span, .project .project-hover .post-hover-inner span, .project .post-hover .project-hover-inner span, .project .post-hover .post-hover-inner span, .post .project-hover .project-hover-inner span, .post .project-hover .post-hover-inner span, .post .post-hover .project-hover-inner span, .post .post-hover .post-hover-inner span {
-        color: rgba(245, 240, 235, 0.8);
+        color: rgba(244, 239, 234, 0.8);
         opacity: 0;
         visibility: hidden;
         position: relative;
@@ -345,8 +345,10 @@ a {
     max-width: 100%; }
   .templateux-footer small {
     font-size: 16px; }
-  .templateux-footer p:last-child {
-    margin-bottom: 0; }
+  .templateux-footer p {
+    font-size: 11px; }
+    .templateux-footer p:last-child {
+      margin-bottom: 0; }
   .templateux-footer .footer-social {
     position: relative; }
     .templateux-footer .footer-social a {
@@ -355,8 +357,11 @@ a {
       transition: .3s all ease;
       font-size: 26px; }
       .templateux-footer .footer-social a:hover, .templateux-footer .footer-social a:focus {
-        color: #dc3545;
+        color: #c99297;
         transform: scale(1.7); }
+    @media (max-width: 991.98px) {
+      .templateux-footer .footer-social {
+        margin-top: 16px; } }
 
 .btn:hover, .btn:focus, .btn:active {
   outline: none;
@@ -380,7 +385,7 @@ textarea.form-control {
   font-size: 13px;
   letter-spacing: .2em;
   text-transform: uppercase;
-  color: #f5f0eb;
+  color: #f4efea;
   border-radius: 30px;
   border: none;
   transition: .3s all ease; }
@@ -390,7 +395,7 @@ textarea.form-control {
     background: #dc3545; }
     .button.button--red:hover {
       text-decoration: none;
-      color: #f5f0eb;
+      color: #f4efea;
       box-shadow: 0 20px 40px -5px rgba(0, 0, 0, 0.4);
       background: #d32535; }
 
@@ -436,7 +441,7 @@ textarea.form-control {
 
 .templateux-media h3 {
   font-size: 18px;
-  color: #dc3545; }
+  color: #c99297; }
 
 .templateux-media .icon span {
   font-size: 40px;
@@ -465,15 +470,15 @@ textarea.form-control {
       left: 50%;
       transform: translate(-50%, -50%); }
     .owl-carousel .owl-dots .owl-dot.active span {
-      border: 2px solid #dc3545;
-      background: #dc3545; }
+      border: 2px solid #c99297;
+      background: #c99297; }
 
 .owl-carousel.dots-overlap .owl-dots {
   bottom: 50px;
   position: absolute;
   z-index: 9; }
   .owl-carousel.dots-overlap .owl-dots .owl-dot span {
-    border: 2px solid #f5f0eb;
+    border: 2px solid #f4efea;
     background: none;
     transition: .3s all ease;
     position: absolute;
@@ -484,8 +489,8 @@ textarea.form-control {
     left: 50%;
     transform: translate(-50%, -50%); }
   .owl-carousel.dots-overlap .owl-dots .owl-dot.active span {
-    border: 2px solid #dc3545;
-    background: #dc3545; }
+    border: 2px solid #c99297;
+    background: #c99297; }
 
 #map {
   height: 700px;
@@ -544,10 +549,10 @@ textarea.form-control {
     margin: 0;
     border-radius: 50% !important;
     font-size: 16px;
-    background: #dc3545;
-    color: #f5f0eb; }
+    background: #c99297;
+    color: #f4efea; }
     .custom-pagination li.active a:hover, .custom-pagination li.active a:focus, .custom-pagination .prev.active a:hover, .custom-pagination .prev.active a:focus, .custom-pagination .next.active a:hover, .custom-pagination .next.active a:focus {
-      color: #f5f0eb; }
+      color: #f4efea; }
   .custom-pagination .prev {
     float: left; }
   .custom-pagination .next {
@@ -558,7 +563,7 @@ textarea.form-control {
   font-size: 12px;
   text-transform: uppercase;
   font-weight: bold;
-  color: #f5f0eb;
+  color: #f4efea;
   letter-spacing: .1em; }
   .post-info > div {
     display: inline-block; }
@@ -624,7 +629,7 @@ textarea.form-control {
         font-weight: 400;
         border-radius: 4px; }
         .comment-list li .comment-body .reply:hover {
-          color: #f5f0eb;
+          color: #f4efea;
           background: #1d1d24; }
 
 .search-form .form-group {
@@ -643,7 +648,7 @@ textarea.form-control {
   font-size: 15px;
   width: 100%;
   float: left;
-  background: #f5f0eb; }
+  background: #f4efea; }
   .sidebar-box *:last-child {
     margin-bottom: 0; }
   .sidebar-box h3 {
@@ -705,14 +710,14 @@ textarea.form-control {
 
 .navbar-bg {
   position: fixed;
-  top: 11px;
+  top: 0;
   width: 100%;
   height: 75px;
   background: #d1d5dc;
   opacity: .9; }
 
 span.copy-email:hover {
-  color: #1d1d24 !important;
+  color: #a7797d !important;
   cursor: pointer; }
 
 .copied-alert {
@@ -721,8 +726,8 @@ span.copy-email:hover {
   font-size: 13px;
   width: 136px;
   height: 24px;
-  margin: 0 auto;
-  bottom: 379px;
+  margin-top: -11px;
+  margin-left: -68;
   left: 50%;
   opacity: .95;
   position: fixed;
@@ -730,3 +735,37 @@ span.copy-email:hover {
   z-index: 100; }
   .copied-alert p {
     text-align: center; }
+
+@keyframes shine {
+  to {
+    background-position: 200% center; } }
+
+.contact-icon {
+  display: inline-block;
+  padding: 0 8px; }
+  .contact-icon svg {
+    fill: #c99297; }
+    .contact-icon svg:hover {
+      fill: #a7797d; }
+  .contact-icon .grow {
+    transition: all .1s ease-in-out; }
+  .contact-icon .grow:hover {
+    transform: scale(1.1); }
+
+.flex-footer {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  justify-content: center; }
+
+.hamburger-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  height: 75px; }
+
+.hamburger-inner, .hamburger-inner:after, .hamburger-inner:before {
+  background-color: #f4efea; }
+
+.hamburger-inner.changed, .hamburger-inner.changed:after, .hamburger-inner.changed:before {
+  background-color: #c99297; }
