--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@ $blue-gray: rgb(108, 129, 144);
 $light-blue-gray: rgb(209, 213, 220);
 $rose-gold: rgb(201, 146, 151);
 $dark-rose: rgb(167, 121, 125);
-$white: rgb(245, 240, 235);
+$white: rgb(244, 239, 234);
 
 body {
 	font-size: 16px;
@@ -42,14 +42,14 @@ a {
 	top: 0;
 	left: 0;
 	width: 100%;
-	padding: 35px 0;
+	padding: 0;
 	z-index: 99999;
 	.container-fluid {
 		max-width: 100%;
 	}
 	.toggle-menu {
 		z-index: 9999;	
-		position: relative;
+		// position: relative;
 		top: -13px;
 		display: none;
 		@include media-breakpoint-down(sm) {
@@ -61,45 +61,51 @@ a {
 	}
 	.site-logo {
 		position: relative;
-		top: -10px;
+		top: 2px;
 		z-index: 9999;
-		a {
-			font-size: 30px;
-			color: $black;
-		}
 	}
 	.templateux-menu {
 		position: relative;
 		ul {
+			display: flex;
+			align-items: center;
+   			justify-content: flex-end;
+			height: 75px;
 			margin-bottom: 0;
+			@include media-breakpoint-down(sm) {
+				display: block;
+				padding: 0;
+				text-align: center;
+			}
 			li {
 				display: inline-block;
 				a {
 					margin-right: 20px;
 					font-size: 13px;
+					font-weight: 700;
 					text-transform: uppercase;
 					letter-spacing: .2em;
-					color: $black;
+					color: $white;
 					position: relative;
-					padding-bottom: 5px;
 					display: block;
 
-					&:before {
-						content: "";
-						position: absolute;
-						bottom: 0;
-						height: 2px;
-						width: 0;
-						left: 0;
-						background: $red;
-						transition: .15s width ease;
+					@include media-breakpoint-down(sm) {
+						margin-right: 0;
 					}
+
+					// &:before {
+					// 	content: "";
+					// 	position: absolute;
+					// 	bottom: 0;
+					// 	height: 2px;
+					// 	width: 0;
+					// 	left: 0;
+					// 	background: $red;
+					// 	transition: .15s width ease;
+					// }
 					
 					&:hover {
-						&:before {
-							width: 100%;
-						}
-						
+						color: $dark-rose !important;
 					}
 				}
 				&.active {
@@ -119,7 +125,8 @@ a {
 		@include media-breakpoint-down(sm) {
 	    position: fixed;
 	    width: 100%;
-	    background-color: #fff;
+		background-color: $white;
+		opacity: .9;
 	    top: 0;
 	    left: 0;
 	    margin: 0;
@@ -162,8 +169,9 @@ a {
 		}
 		.hamburger {
 			.hamburger-inner {
+				
 				&, &::before, &::after {
-					background-color: $white;
+					// background-color: $rose-gold;
 				}
 				&:after {
 
@@ -190,7 +198,7 @@ a {
 	.site-logo {
 		a {
 			@include media-breakpoint-down(sm) {
-				color: $black!important;
+				color: $rose-gold!important;
 			}
 		}
 	}
@@ -198,7 +206,7 @@ a {
 		.hamburger {
 			.hamburger-inner {
 				&, &::before, &::after {
-					background-color: $black;
+					background-color: $dark-rose;
 				}
 				&:after {
 
@@ -219,13 +227,13 @@ a {
 				margin-left: 0px;
 			}
 		}
-		@include media-breakpoint-down(sm) {
-			li {
-				a {
-					color: $black!important;
-				}
-			}
-		}
+		// @include media-breakpoint-down(sm) {
+		// 	li {
+		// 		a {
+		// 			color: $black!important;
+		// 		}
+		// 	}
+		// }
 	}
 }
 .hero {
@@ -234,7 +242,10 @@ a {
 	background-position: center center;
 	position: relative;
 	overflow: hidden;
-	background: $rose-gold;
+	background: linear-gradient(to right, $rose-gold 20%, #EBA4AB 40%, #EBA4AB 60%, $rose-gold 80%);
+	animation: shine 5s linear infinite;
+	background-size: 200% auto;
+
 	.lead {
 		font-size: 28px;
 		@include media-breakpoint-down(md) {
@@ -277,15 +288,12 @@ a {
 	}
 }
 .hero, .intro {
-	height: 90vh;
-	min-height: 700px;
+	height: 70vh;
+	// min-height: 700px;
 
 	h1 {
-		color: $black;
-		font-size: 70px;
-		@include media-breakpoint-down(md) {
-			font-size: 36px;
-		}
+		color: $dark-rose;
+		font: 900 36px 'Playfair Display', serif;
 	}
 }
 .templateux-portfolio-overlap {
@@ -316,7 +324,7 @@ a {
 .templateux-cta {
 	padding: 7em 0;
 	display: block;
-	background: gray('100');
+	background: $blue-gray;
 	position: relative;
 	&:before {
 		content: "";
@@ -344,14 +352,22 @@ a {
 		transition: .3s all ease;
 	}
 	.words-1 {
+		color: $rose-gold;
 		opacity: 1;
 		visibility: visible;
 		top: 0;
+		@include media-breakpoint-down(sm) {
+			font-size: 24px;
+		}
 	}
 	.words-2 {
 		opacity: 0;
 		visibility: hidden;
 		top: 40px;
+		font-weight: 700;
+		@include media-breakpoint-down(sm) {
+			font-size: 24px;
+		}
 	}
 	h2 { 
 		font-weight: normal;
@@ -482,6 +498,7 @@ a {
 		font-size: 16px;
 	}
 	p {
+		font-size: 11px;
 		&:last-child {
 			margin-bottom: 0;
 		}
@@ -497,6 +514,9 @@ a {
 				color: $primary;
 				transform: scale(1.7)
 			}
+		}
+		@include media-breakpoint-down(md) {
+			margin-top: 16px;
 		}
 	}
 }
@@ -965,7 +985,7 @@ textarea.form-control {
 
   .navbar-bg {
 	position: fixed;
-	top: 11px;
+	top: 0;
     width: 100%;
     height: 75px;
 	background: $light-blue-gray;
@@ -975,27 +995,79 @@ textarea.form-control {
   span.copy-email {
 
 	&:hover {
-		color: $black!important;
+		color: $dark-rose!important;
 		cursor: pointer;
 	}
   }
   .copied-alert {
 	display: none;
-	background: $light-blue-gray;
+    background: $light-blue-gray;
     font-size: 13px;
     width: 136px;
     height: 24px;
-    margin: 0 auto;
-	bottom: 379px;
-	left: 50%;
-	opacity: .95;
+	margin-top: -11px;
+	margin-left: -68;
+    left: 50%;
+    opacity: .95;
     position: fixed;
     border-radius: 3px;
-	z-index: 100;
+    z-index: 100;
 	p {
 		text-align: center;
+	} 
+  }
+
+   // Gradient Animation
+
+   @keyframes shine {
+	to {
+	  background-position: 200% center;
 	}
   }
 
+  // Instagram and LinkedIn Icons
+
+  .contact-icon {
+
+	display: inline-block;
+	padding: 0 8px;
+
+	svg {
+		fill: $rose-gold;
+
+		&:hover {
+			fill: $dark-rose;
+		}
+
+	}
+
+	.grow { transition: all .1s ease-in-out; }
+	.grow:hover { transform: scale(1.1); }
+
+}
+
+.flex-footer {
+	@include flex;
+}
+
+// Mobile Nav CSS
+
+.hamburger-container {
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	height: 75px;
+}
+
+.hamburger-inner, .hamburger-inner:after, .hamburger-inner:before {
+	background-color: $white;
+}
+
+.hamburger-inner.changed, .hamburger-inner.changed:after, .hamburger-inner.changed:before {
+	background-color: $rose-gold;
+}
 
 
+
+
+ 
