--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,8 +24,8 @@ body {
 	font-family: $font-family-sans-serif;
 }
 
-::-moz-selection { background: yellow; }
-::selection { background: yellow; }
+::-moz-selection { background: $gray; }
+::selection { background: $gray; } 
 h1, h2, h3, h4, h5 {
 	color: $black;
 } 
@@ -125,7 +125,7 @@ a {
 		@include media-breakpoint-down(sm) {
 	    position: fixed;
 	    width: 100%;
-		background-color: $white;
+		background-color: $light-blue-gray;
 		opacity: .9;
 	    top: 0;
 	    left: 0;
@@ -198,7 +198,7 @@ a {
 	.site-logo {
 		a {
 			@include media-breakpoint-down(sm) {
-				color: $rose-gold!important;
+				// color: $rose-gold!important;
 			}
 		}
 	}
@@ -298,9 +298,26 @@ a {
 }
 .templateux-portfolio-overlap {
 	position: relative;
-	margin-top: -100px;
-	@include media-breakpoint-down(md) {
+	margin-top: -218px;
+
+	&.home-portfolio {
 		margin-top: -50px;
+	}
+
+	p {
+		color: $black;
+	}
+
+	p.special {
+		color: $white;
+	}
+
+	@include media-breakpoint-down(xs) {
+		margin-top: 0;
+
+		p.special {
+			color: $black;
+		}
 	}
 }
 .container-fluid {
@@ -352,7 +369,7 @@ a {
 		transition: .3s all ease;
 	}
 	.words-1 {
-		color: $rose-gold;
+		color: $white;
 		opacity: 1;
 		visibility: visible;
 		top: 0;
@@ -428,7 +445,7 @@ a {
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background: rgba($primary, .9);
+		background: $blue-gray;
 		visibility: hidden;
 		opacity: 0;
 		transition: .3s all ease;
@@ -557,13 +574,13 @@ textarea.form-control {
 	&:hover,&:active, &:focus {
 		outline: none;
 	}
-	&.button--red {
-		background: $red;
+	&.button--primary {
+		background: $rose-gold;
 		&:hover {
 			text-decoration: none;
 			color: $white;
 			box-shadow: 0 20px 40px -5px rgba(0,0,0,.4);
-			background: darken($red, 5%);
+			background: $dark-rose;
 		}
 	}
 }
@@ -1068,6 +1085,47 @@ textarea.form-control {
 }
 
 
+// Project Page
 
+.templateux-hero {
+
+	background: $blue-gray;
+
+		.project-intro {
+		height: 73vh;
+
+		h1 {
+			color: $rose-gold;
+			font: 900 36px 'Playfair Display', serif;
+		}
+
+		span {
+			font-size: 13px;
+			font-weight: 700;
+			text-transform: uppercase;
+			letter-spacing: .2em;
+			color: $white;
+		}
+
+		@include media-breakpoint-down(xs) {
+			height: 40vh;
+			align-items: flex-end!important;
+			margin-bottom: 24px;
+
+			h1 {
+				padding-bottom: 12px;
+			}
+		}
+
+	}
+
+}
+
+// Cupcake Project
+
+.cupcake-how-to {
+	max-width: 100%;
+    height: auto;
+}
 
  
