--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1001,6 +1001,11 @@ textarea.form-control {
 	width: 100%;
   }
 
+  .spacer {
+	  display: block;
+	  height: 16px;
+  }
+
   .navbar-bg {
 	position: fixed;
 	top: 0;
@@ -1112,10 +1117,7 @@ textarea.form-control {
 			height: 40vh;
 			align-items: flex-end!important;
 			margin-bottom: 24px;
-
-			h1 {
-				padding-bottom: 12px;
-			}
+			padding-bottom: 12px;
 		}
 
 	}
