--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ body {
   color: #6c757d;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
 
+a {
+  color: #c99297; }
+  a:hover {
+    color: #a7797d; }
+
 ::-moz-selection {
   background: #2e3140; }
 
