add new projects

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1131,7 +1131,7 @@ textarea.form-control {
 
 }
 
-// Cupcake Project
+// Cupcake Project (And Innovation Day Project Video)
 
 .cupcake-how-to {
 	max-width: 100%;
