--- a/scss/style.scss
+++ b/scss/style.scss
@@ -315,6 +315,11 @@ a {
 		color: $black;
 	}
 
+	p.image-caption {
+		color: $gray-500;
+		font-size: 14px;
+	}
+
 	p.special {
 		color: $white;
 	}
