--- a/scss/style.scss
+++ b/scss/style.scss
@@ -318,6 +318,7 @@ a {
 	p.image-caption {
 		color: $gray-500;
 		font-size: 14px;
+		margin: 0 auto;
 	}
 
 	p.special {
@@ -1140,7 +1141,12 @@ textarea.form-control {
 
 .hero-image {
 	box-shadow: 2px 2px 10px rgba(0, 0, 0, .1);
+	// max-width: 800px;
 }
+
+// .secondary-hero-image {
+// 	max-width: 800px;
+// }
 
 // Cupcake Project (And Innovation Day Project Video)
 
@@ -1172,6 +1178,12 @@ figure {
 
 		}	
 	}
+}
+
+// General list styles
+
+ul, li {
+	color: $black;
 }
 
 // Image Before After
