--- a/css/style.css
+++ b/css/style.css
@@ -830,6 +830,18 @@ span.copy-email:hover {
         .native-tour figure img {
           height: 80%; } }
 
+.mobile-only {
+  display: block; }
+  @media (min-width: 992px) {
+    .mobile-only {
+      display: none; } }
+
+.desktop-only {
+  display: block; }
+  @media (max-width: 991.98px) {
+    .desktop-only {
+      display: none; } }
+
 ul, li {
   color: #1d1d24; }
 
