--- a/scss/style.scss
+++ b/scss/style.scss
@@ -292,10 +292,24 @@ a {
 			color: $white;
 			opacity: .5;
 		}
+	} 
+
+	p.email-text, a {
+		color: $white;
 	}
+
+	a {
+		text-decoration: underline;
+
+		&:hover {
+			opacity: 50%;
+		}
+	}
+
 }
 .hero, .intro {
-	height: 70vh;
+	height: 100%;
+	// height: 70vh;
 	// min-height: 700px;
 
 	h1 {
