--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -319,7 +319,7 @@ section.projects {
 }
 
 .house-rules {
-	background: url("images/projects/thumbnails/house-thumbnail.jpg")
+	background: url("../images/projects/thumbnails/house-thumbnail.jpg")
 		no-repeat center;
 	background-size: cover;
 	min-height: 200px;
@@ -336,7 +336,7 @@ section.projects {
 }
 
 .decline-flow {
-	background-image: url("images/projects/thumbnails/decline-thumbnail.jpg");
+	background-image: url("../images/projects/thumbnails/decline-thumbnail.jpg");
 	background-size: cover;
 	min-height: 200px;
 	padding: 16px;
@@ -352,7 +352,7 @@ section.projects {
 }
 
 .cancel-change {
-	background-image: url("images/projects/thumbnails/cancel-thumbnail.jpg");
+	background-image: url("../images/projects/thumbnails/cancel-thumbnail.jpg");
 	background-size: cover;
 	min-height: 200px;
 	padding: 16px;
@@ -368,7 +368,7 @@ section.projects {
 }
 
 .inbox {
-	background-image: url("images/projects/thumbnails/inbox-thumbnail.jpg");
+	background-image: url("../images/projects/thumbnails/inbox-thumbnail.jpg");
 	background-size: cover;
 	min-height: 200px;
 	padding: 16px;
