--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@ hr {
   margin: 0 24px; }
 
 .project-image-large {
-  margin: 0 auto 24px;
+  margin: 16px auto 24px;
   width: 100%;
   max-width: 800px;
   height: auto; }
@@ -305,10 +305,11 @@ section.projects {
   background: #ffffff; }
   .lightbox_content h2 {
     margin: 24px 24px 64px; }
-  .lightbox_content h3, .lightbox_content h4, .lightbox_content p {
+  .lightbox_content h3, .lightbox_content p {
     margin: 24px; }
   .lightbox_content h4 {
-    color: #6c8190; }
+    color: #6c8190;
+    margin: 24px 24px 0; }
 
 .close {
   font-size: 2rem;
