--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -530,3 +530,37 @@ section.projects {
 		cursor: pointer;
 	}
 }
+
+
+
+
+.row {
+	display: flex;
+	flex-wrap: nowrap;
+	width: 100%;
+	gap: 16px;
+	flex-direction: row;
+	@media only screen and (max-width: 768px) {
+		flex-wrap: wrap;
+	}
+
+	.column {
+		width: calc(100% / 2);
+	
+		@media only screen and (max-width: 768px) {
+			width: 100%;
+		}
+
+		&.large-image-container {
+			margin-top: 24px;
+
+			@media only screen and (max-width: 768px) {
+				margin-top: 0;
+			}
+
+		}
+	}
+
+
+}
+
