Update a lot of content

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,8 @@ h1 {
 
 .note p {
   color: #6c8190;
-  font-size: 14px; }
+  font-size: 14px;
+  margin-top: 0 !important; }
 
 .center {
   text-align: center; }
@@ -404,3 +405,8 @@ section.projects {
       @media only screen and (max-width: 768px) {
         .row .column.large-image-container {
           margin-top: 0; } }
+    .row .column p:last-child {
+      margin-bottom: 0; }
+
+.inline-link {
+  color: #1d1d24; }
