--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -508,7 +508,7 @@ section.projects {
 #houseRulesOpened,
 #declineFlowOpened,
 #cancelChangeOpened,
-#inboxOpened, #flowBuilderOpened, #variantOpened, #versioningOpened, #workshopsOpened {
+#inboxOpened, #flowBuilderOpened, #variantOpened, #versioningOpened, #workshopsOpened, #infinityOpened, #optimizedABOpened {
 	position: fixed;
 	width: 100%;
 	height: 100%;
